--- a/pages/to-ladder/step-two/step-two.wxml
+++ b/pages/to-ladder/step-two/step-two.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-    <view>
+    <view style=" padding-bottom:80rpx;">
         <view class="step-box">
             <view class="item itemActive"></view>
             <view class="item itemActive"></view>
@@ -11,23 +11,35 @@
             <view class="step-text">请完成您的资料，将会获得更多权益哦～</view>
         </view>
         <view class="flex-center border-box flex-colomn">
-            <textarea placeholder="一句话介绍下自己" placeholder-style="font-size:28rpx;color:#CECECE"></textarea>
+            <textarea placeholder="一句话介绍下自己" placeholder-style="font-size:28rpx;color:#CECECE" bind:blur="getIntroduce"></textarea>
             <view class="middle-txt">发布一个动态，正式加入陪练~</view>
-            <textarea placeholder="说点什么，让大家看到不一样的你..." placeholder-style="font-size:28rpx;color:#CECECE"></textarea>
+            <textarea placeholder="说点什么，让大家看到不一样的你..." placeholder-style="font-size:28rpx;color:#CECECE" bindblur="getContent"></textarea>
         </view>
         <view class="foot">
-            <view style="position:relative;box-sizing: border-box" wx:for="{{imageList}}" wx:key="index">
-                <image class="{{imageList.length>0?'img-m':'img-z'}}"  src="{{item}}" ></image>
-                <image src="../../../images/icon/cancel.png" class="cancel" bindtap="deleteImage" data-idx="{{index}}"></image>
-            </view>
+            <view wx:if="{{videoUrl && videoUrl.length>0}}" class="flex-center" style="position:relative;box-sizing: border-box;width:100%">
+                <video src="{{videoUrl}}" ></video>
+                <image src="../../../images/icon/cancel.png" class="cancel2" bindtap="deleteVideo"></image>
 
-            <view class="photo" bindtap="chooseLocalImage">
-                <image src="../../../images/icon/photo.png" class="photo-icon"></image>
-                <view>
-                    上传照片
+            </view>
+            <view wx:else class="flex-box">
+                <view style="position:relative;box-sizing: border-box" wx:for="{{imageList}}" wx:key="index">
+                    <image class="{{imageList.length>0?'img-m':'img-z'}}"  src="{{item.tempFilePath}}" ></image>
+                    <image src="../../../images/icon/cancel.png" class="cancel" bindtap="deleteImage" data-idx="{{index}}"></image>
                 </view>
             </view>
+
+<!--            如果是上传了视频就先隐藏掉。删除了视频在显示-->
+            <view class="photo" bindtap="chooseLocalImage"  wx:if="{{!videoUrl}}">
+                <image src="../../../images/icon/photo.png" class="photo-icon"></image>
+                <view>
+                    上传照片/视频
+                </view>
+            </view>
+
+        </view>
+        <view class="foot">
             <view class='defaultBtn flex-center' bindtap="nextStep">下一步</view>
         </view>
+
     </view>
 </view>
