--- a/pages/found/found.wxss
+++ b/pages/found/found.wxss
@@ -31,115 +31,6 @@ background:var(--tabs-bottom-bar-color,linear-gradient(246deg,rgba(248,151,120,1
     border-bottom:2rpx solid #EDEDED;
     height:50px !important;
 }
-
-
-.content .list-item{
-    padding:0 32rpx 36rpx;
-    border-bottom:2rpx solid #EDEDED
-}
-.content .list-item .user{
-        height:156rpx;
-        align-items: center;
-}
-
-.content .list-item .headImg{
-    width:100rpx;
-    height:100rpx;
-    border-radius:50%;
-    margin-right:28rpx;
-}
-
-.content .list-item .userInfo{
-   color:#333;
-    font-size:30rpx;
-    font-weight:700;
-}
-.content .list-item .userInfo .lv1{
-   width:44rpx;
-    height:28rpx;
-    margin-right:12rpx;
-}
-.content .list-item .userInfo .lv2{
-    width:88rpx;
-    height:28rpx;
-    position:absolute;
-    top:0;left:0;
-}
-.content .list-item .user .trend{
-    border-radius:26rpx;
-    width:96rpx;
-    height:52rpx;
-    color:#F14B7F;
-    font-size:24rpx;
-    border:2rpx solid rgba(241,75,127,1);
-}
-.content .list-item .user .disabledTrend{
-    border-radius:26rpx;
-    width:120rpx;
-    height:52rpx;
-    color:#999999;
-    font-size:24rpx;
-    border:2rpx solid rgba(229,229,229,1);
-}
-.content .list-item .title {
-
-    color:#666;
-    font-size:28rpx;
-
-}
-.content .list-item .imgBox {
-
-    margin-top:20rpx;
-}
-.content .list-item .imgBox .imgType1{
-    width:224rpx;
-    height:224rpx;
-}
-
-.content .list-item .imgBox .imgType2{
-    width:356rpx;
-    height:356rpx;
-}
-.content .list-item .imgBox image{
-    flex-shrink: 0;
-
-    margin-right:8rpx;
-    border-radius:10rpx;
-}
-.content .list-item .item-foot{
-    font-size:24rpx;
-    color:#C9C9C9;
-    margin-top:26rpx;
-}
-.content .list-item .item-foot .point{
-    width:6rpx;
-    height:6rpx;
-    border-radius:50%;
-    background:#DCDCDC;
-    margin:0 16rpx;
-}
-.content .list-item .item-foot .talking{
-   color:#C9C9C9;
-    font-size:24rpx;
-}
-.content .list-item .item-foot image{
-   width:36rpx;
-    height:36rpx;
-}
-
-.lv-box{
-    position:relative;
-    text-align: center;
-    width:88rpx;
-    height:28rpx;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    padding-left:12rpx;
-}
-.lv-box .lv-text{
-    position:relative;z-index:10;
-    font-size:20rpx;
-    color:#fff;
-
+tab{
+    max-width:750rpx;
 }
