--- a/pages/training-space/index.wxss
+++ b/pages/training-space/index.wxss
@@ -1,6 +1,10 @@
-
+.container{
+    background-color:#F5F5F5;
+    height:auto;
+}
 .content {
     padding: 0 32rpx 80rpx;
+    background-color:#fff;
 }
 
 .header-title {
@@ -192,4 +196,17 @@
     color:#999;
     font-size:24rpx;
     text-align: center;
+    width:300rpx;
+    height:60rpx;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius:48rpx;
+    border:2rpx solid rgba(229,229,229,1);
+}
+
+.recommend{
+  margin-top:16rpx;
+    background:#fff;
+    padding:32rpx;
 }
