--- a/pages/moment-time/moment-time.wxml
+++ b/pages/moment-time/moment-time.wxml
@@ -2,26 +2,31 @@
     <view style="align-self: center">
         <textarea placeholder="说点什么，让大家看到不一样的你..." placeholder-class="text-holder"  bindinput="getInputText"></textarea>
     </view>
-    <view class="imgList-box">
-<!--        <view  wx:if="{{upLoadList.length>0}}">-->
-<!--            <image wx:for="{{upLoadList}}" src="{{item}}" wx:key="index"></image>-->
-<!--        </view>-->
-        <view>
-            <uploader upload-text="上传照片"
-                      accept="media"
-                      bind:after-read="getUpLoadImage"
-                      bind:before-read="beforeUpload"
-                      bind:delete="deleteImage"
-                      use-before-read multiple
-                      deletable
-                      file-list="{{ upLoadList }}"
-            ></uploader>
+    <view class="foot">
+        <view wx:if="{{videoUrl && videoUrl.length>0}}" class="flex-center" style="position:relative;box-sizing: border-box;width:100%">
+            <video src="{{videoUrl}}" ></video>
+            <image src="../../../images/icon/cancel.png" class="cancel2" bindtap="deleteVideo"></image>
+
+        </view>
+        <view wx:else class="flex-box image-box">
+            <view style="position:relative;box-sizing: border-box" wx:for="{{imageList}}" wx:key="index">
+                <image class="{{imageList.length>0?'img-m':'img-z'}}"  src="{{item.tempFilePath}}" ></image>
+                <image src="../../images/icon/cancel.png" class="cancel" bindtap="deleteImage" data-idx="{{index}}"></image>
+            </view>
+        </view>
+
+        <!--            如果是上传了视频就先隐藏掉。删除了视频在显示-->
+        <view class="photo" bindtap="chooseLocalImage"  wx:if="{{!videoUrl}}">
+            <image src="../../images/icon/photo.png" class="photo-icon"></image>
+            <view>
+                上传照片
+            </view>
         </view>
 
     </view>
      <view class="flex-center">
 
 
-         <view class="defaultBtn flex-center {{!upLoadList || !InputText.length?'bg2':'bg1'}}" bindtap="postMomentTime">发布</view>
+         <view class="defaultBtn flex-center {{!imageList.length>0 && !InputText.length.length>0?'bg2':'bg1'}}" bindtap="postMomentTime">发布</view>
      </view>
 </view>
