--- a/vant/tab/index.wxml
+++ b/vant/tab/index.wxml
@@ -4,5 +4,6 @@
   class="custom-class {{ utils.bem('tab__pane', { active, inactive: !active }) }}"
   style="{{ shouldShow ? '' : 'display: none;' }}"
 >
+  <slot wx:if="{{title}}" name="title"/>
   <slot wx:if="{{ shouldRender }}" />
 </view>
