--- a/pages/training-space/index.wxss
+++ b/pages/training-space/index.wxss
@@ -1,6 +1,7 @@
 .container{
     background-color:#F5F5F5;
     height:auto;
+    padding-bottom: 138rpx;
 }
 .content {
     padding: 0 32rpx 80rpx;
@@ -13,16 +14,18 @@
     display: flex;
     align-items: flex-end;
     padding: 0 32rpx;
+    background:#fff  trans;
 }
 
 .head-img {
     width: 100%;
-    filter: blur(12rpx);
-    height: 320rpx;
+    height:320rpx;
+    filter: blur(4rpx);
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: cover;
+    background-size: 100% 500rpx;
+    background-repeat: no-repeat;
 }
 
 .userInfo {
@@ -91,8 +94,8 @@
 
     color: #666;
     font-size: 26rpx;
-    margin-top: 44rpx;
-    margin-bottom: 92rpx;
+    padding-top: 44rpx;
+    padding-bottom: 92rpx;
 }
 
 .trainer {
@@ -209,4 +212,44 @@
   margin-top:16rpx;
     background:#fff;
     padding:32rpx;
+}
+
+.foot-btn {
+    height: 138rpx;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 32rpx;
+    position:fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+    box-sizing: border-box;
+    background:#fff;
+}
+
+.foot-btn .btn {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.foot-btn .btn1 {
+    border-radius: 46rpx;
+    border: 2rpx solid rgba(241, 76, 127, 1);
+    color: #F14C7F;
+    font-size: 32rpx;
+    font-weight: 600;
+    width:252rpx;
+    height:90rpx;
+}
+
+.foot-btn .btn2 {
+    background: linear-gradient(246deg, rgba(248, 151, 120, 1) 0%, rgba(241, 75, 127, 1) 100%);
+    border-radius: 46rpx;
+    color: #f8f8f8;
+    font-size: 32rpx;
+    width:406rpx;
+    height:90rpx;
 }
