--- a/pages/create-order/index.wxml
+++ b/pages/create-order/index.wxml
@@ -16,19 +16,20 @@
         </view>
         <view class="choose-list">
             <view class="row" bindtap="selectStadium">
-                <view>选择场地</view>
-                <view class="txt">
-                    {{showData.stadium || '请选择场馆'}} >
+                <view style="min-width:180rpx;">选择场地</view>
+                <view class="txt cutTxt1 {{showData.stadium?'txtColor':''}}" >
+                    {{showData.stadium || '请选择场馆 '}} >
                 </view>
             </view>
-            <view class="row">
+            <view class="row" bindtap="chooseTime">
                 <view>选择时间段</view>
-                <view class="txt">
-                    请选择时间 >
+                <view class="txt {{showData.QuanTime?'txtColor':''}}">
+                    {{showData.QuanTime || '请选择时间 '}} >
+
                 </view>
             </view>
             <view class="row">
-                <view>选择场地</view>
+                <view>购买方式</view>
                 <view class="txt2">
                     ¥ {{userData.orderPrice}}/小时
                 </view>
@@ -50,7 +51,7 @@
             <text>合计：</text>
             <text class="icon">¥</text><text class="price">{{userData.orderPrice}}</text>
         </view>
-        <view class="btn">
+        <view class="btn" bindtap="createOrder">
             立即支付
         </view>
     </view>
@@ -58,24 +59,32 @@
         <view class="modal"></view>
         <view class="content">
             <view class="flex-box flex-space flex-y-center skill-title">
-                <image src="../../images/icon/cancel2.png" class="cancel" bindtap="closeModal"></image>
-                <view style="font-weight:700">擅长技能</view>
-                <view class="sure" bindtap="closeModal1" data-choose="chooseSkill">确定</view>
+                <image src="../../images/icon/cancel2.png" class="cancel" bindtap="closeModal1"></image>
+                <view style="font-weight:700">选择陪练时间段</view>
+                <view class="sure" bindtap="closeModal" data-choose="chooseSkill">确定</view>
             </view>
-            <tabs active="{{ activeIndex }}" bind:change="onChange" line-width="20" line-height="4" animated
-                  border="{{false}}" style="flex:1;width:750rpx;" class="flex-box" sticky>
-<!--                <view slot="nav-left" class="flex-center btn-box">-->
-<!--                    <view class="btn flex-center" bindtap="goToPage">-->
-<!--                        发动态-->
-<!--                    </view>-->
-<!--                </view>-->
-                <tab title="{{item}}" wx:for="{{categoryList}}"
-                     title-style="color:{{activeIndex==index?'#333':'#999999'}};font-weight:{{activeIndex==index?'700':'500'}}"
-                     wx:key="index">
-                   <view slot="title"> 啊手动阀手动阀</view>
-                </tab>
-
-            </tabs>
+            <view>
+                <tabBar tabList="{{tabList}}" bind:PostCurrentIndex="getTabIndex" key="week" key1="date"></tabBar>
+                <view class="choose-time">今天(07-11) <text>11:00-13:00 </text>(2个小时)</view>
+                <swiper duration="{{500}}" current="{{activeIndex}}">
+                    <block wx:for="{{workTime.weekTime}}" wx:key="*this">
+                        <swiper-item class="swiper-box">
+                            <view class="time-item default {{timeItem.select?'active':''}}" wx:for="{{workTime.orderTime}}" wx:key="index" wx:for-item="timeItem" bindtap="chooseOrderTime" data-choose="{{index}}">
+                                {{timeItem.hour+":00"}}
+                                <view class="item-status bg1" wx:if="{{chooseTimeIndex[0]==index}}">
+                                  开始
+                                </view>
+                                <view class="item-status bg1" wx:elif="{{chooseTimeIndex[chooseTimeIndex.length-1]==index}}">
+                                  结束
+                                </view>
+                                <view class="item-status bg2" wx:elif="{{chooseTimeIndex[1]==index}}">
+                                  已满
+                                </view>
+                            </view>
+                        </swiper-item>
+                    </block>
+                </swiper>
+            </view>
         </view>
     </view>
 </view>
